B&L QA/objects/Office_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Profile</label>
        <referenceTo>Account_Profile__c</referenceTo>
        <relationshipLabel>Office Details</relationshipLabel>
        <relationshipName>Office_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_Of_Surgeons_For_Glaucoma__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Surgeons For Glaucoma</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Surgeons_For_Plastics__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Surgeons For Plastics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Surgeons_For_Refractive__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Surgeons For Refractive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Surgeons_For_Retina__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Surgeons For Retina</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Surgeons_For_Cataract__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Surgeons For Cataract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Office Detail</label>
    <nameField>
        <displayFormat>OFF-DET-{0000000000}</displayFormat>
        <label>Office Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Office Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>